syntax = "proto3";

package atomix.set;

import "google/protobuf/duration.proto";
import "atomix/headers/headers.proto";
import "atomix/primitive/primitive.proto";

option java_package = "io.atomix.api.set";
option java_multiple_files = true;

message CreateRequest {
    atomix.primitive.PrimitiveId id = 1;
    google.protobuf.Duration timeout = 2;
}

message CreateResponse {
    repeated atomix.headers.SessionHeader headers = 1;
}

message KeepAliveRequest {
    atomix.primitive.PrimitiveId id = 1;
    repeated atomix.headers.SessionHeader headers = 2;
}

message KeepAliveResponse {
    repeated atomix.headers.SessionHeader headers = 1;
}

message CloseRequest {
    atomix.primitive.PrimitiveId id = 1;
    repeated atomix.headers.SessionHeader headers = 2;
    bool delete = 3;
}

message CloseResponse {

}

message SizeRequest {
    atomix.primitive.PrimitiveId id = 1;
    repeated atomix.headers.SessionQueryHeader headers = 2;
}

message SizeResponse {
    repeated atomix.headers.SessionResponseHeader headers = 1;
    int32 size = 2;
}

message ContainsRequest {
    atomix.primitive.PrimitiveId id = 1;
    repeated atomix.headers.SessionQueryHeader headers = 2;
    repeated string values = 3;
}

message ContainsResponse {
    repeated atomix.headers.SessionResponseHeader headers = 1;
    bool contains = 2;
}

message AddRequest {
    atomix.primitive.PrimitiveId id = 1;
    repeated atomix.headers.SessionCommandHeader headers = 2;
    repeated string values = 3;
}

message AddResponse {
    repeated atomix.headers.SessionResponseHeader headers = 1;
    ResponseStatus status = 2;
    bool added = 3;
}

message RemoveRequest {
    atomix.primitive.PrimitiveId id = 1;
    repeated atomix.headers.SessionCommandHeader headers = 2;
    repeated string values = 3;
}

message RemoveResponse {
    repeated atomix.headers.SessionResponseHeader headers = 1;
    ResponseStatus status = 2;
    bool removed = 3;
}

message ClearRequest {
    atomix.primitive.PrimitiveId id = 1;
    repeated atomix.headers.SessionCommandHeader headers = 2;
}

message ClearResponse {
    repeated atomix.headers.SessionResponseHeader headers = 1;
}

message EventRequest {
    atomix.primitive.PrimitiveId id = 1;
    repeated atomix.headers.SessionCommandHeader headers = 2;
}

message EventResponse {
    atomix.headers.SessionResponseHeader header = 1;
    Type type = 2;
    string value = 3;

    enum Type {
        ADDED = 0;
        REMOVED = 1;
    }
}

message IterateRequest {
    atomix.primitive.PrimitiveId id = 1;
    repeated atomix.headers.SessionQueryHeader headers = 2;
}

message IterateResponse {
    atomix.headers.SessionResponseHeader header = 1;
    string value = 2;
}

enum ResponseStatus {
    OK = 0;
    NOOP = 1;
    WRITE_LOCK = 2;
}

// Set service
service SetService {

    rpc Create(CreateRequest) returns (CreateResponse) {}

    rpc KeepAlive(KeepAliveRequest) returns (KeepAliveResponse) {}

    rpc Close(CloseRequest) returns (CloseResponse) {}

    rpc Size(SizeRequest) returns (SizeResponse) {}

    rpc Contains(ContainsRequest) returns (ContainsResponse) {}

    rpc Add(AddRequest) returns (AddResponse) {}

    rpc Remove(RemoveRequest) returns (RemoveResponse) {}

    rpc Clear(ClearRequest) returns (ClearResponse) {}

    rpc Listen(EventRequest) returns (stream EventResponse) {}

    rpc Iterate(IterateRequest) returns (stream IterateResponse) {}
}
